# getCertificateChain

./: .deepsource.toml  .gitignore  CHANGELOG.md  CertificateManager.py  ConnectionManager.py  FileManager.py  LICENSE.md  README.md  getCertChain.ps1  getCertChain.py  get_certificate_chain.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst
get_certificate_chain/: main.py
get_certificate_chain/tests/: test_cert.py
get_certificate_chain/tests/test_data/: generate_cert.sh  root_ca.cnf  server.cnf
tests/: example.cnf  example1_cert.pem  example1_key.pem  generate_cert.sh  test_cert.py
